--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <title>パオちゃんずの溜まり場</title>
   </head>
 
-<form method="get" action="http://www.google.co.jp/search" >
-  <input type="text" name="q" size="31" maxlength="255" value="">
-  <input type="submit" name="btng" value="検索">
-  <input type="hidden" name="hl" value="ja">
-  <input type="hidden" name="sitesearch" value="file:///C:/Users/User/Desktop/paopao/paopao-searcher.html">
-</form>
+
+  <script>
+  (function() {
+    var cx = '001513062561453022662:uul0zooihcw';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:searchbox></gcse:searchbox>
 
 
 <p>aaaaaaaaaaaaaaaaa</p>
+<p>azuki</p>
