--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>パオちゃんずの溜まり場</title>
   </head>
 
+  <form method="get" action="http://www.google.co.jp/search" >
+  <input type="text" name="q" size="31" maxlength="255" value="">
+  <input type="submit" name="btng" value="検索">
+  <input type="hidden" name="hl" value="ja">
+  <input type="hidden" name="sitesearch" value="">
+</form>
+
 
   <script>
   (function() {
