--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <input type="text" name="q" size="31" maxlength="255" value="">
   <input type="submit" name="btng" value="検索">
   <input type="hidden" name="hl" value="ja">
-  <input type="hidden" name="sitesearch" value="">
+  <input type="hidden" name="sitesearch" value="https://kakehashi-toma.github.io/pao-searcher.html/">
 </form>
 
 
