--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
   </head>
 
 
+<body>
+  <div>
+    <script>
+    (function() {
+      var cx = '001513062561453022662:uul0zooihcw';
+      var gcse = document.createElement('script');
+      gcse.type = 'text/javascript';
+      gcse.async = true;
+      gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(gcse, s);
+    })();
+    </script>
+   <gcse:searchbox></gcse:searchbox>
+ </div>
 
-  <script>
-  (function() {
-    var cx = '001513062561453022662:uul0zooihcw';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:searchbox></gcse:searchbox>
 
+  <p>aaaaaaaaaaaaaaaaa</p>
+  <p>azuki</p>
 
-<p>aaaaaaaaaaaaaaaaa</p>
-<p>azuki</p>
+</body>
